# reminder-manager

./: .gitignore  LICENSE  README.md  README.pt-BR.md  gui.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
core/: __init__.py  notifier.py  reminders.py  scheduler.py  storage.py
tests/: test_notifier.py  test_reminders.py  test_scheduler.py  test_storage.py
